@@ -52,42 +52,93 @@
         <version>3.14.0</version>
     </dependency>
 
+
+	<dependency>
+		<groupId>org.junit.platform</groupId>
+		<artifactId>junit-platform-launcher</artifactId>
+		<scope>test</scope>
+	</dependency>
+
 </dependencies>
 
 
+	
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+	<plugins>
 
+		<plugin>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+		</plugin>
 
-			<plugin>
-			<groupId>org.jacoco</groupId>
-			<artifactId>jacoco-maven-plugin</artifactId>
-			<version>0.8.11</version>
-			<executions>
-				<execution>
-				<id>prepare-agent</id>
-				<goals>
-					<goal>prepare-agent</goal>
-				</goals>
-				</execution>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>3.2.5</version>
+		</plugin>
 
-				<execution>
-				<id>report</id>
-				<phase>test</phase>
-				<goals>
-					<goal>report</goal>
-				</goals>
-				</execution>
+		
+		<plugin>
+			<groupId>org.pitest</groupId>
+			<artifactId>pitest-maven</artifactId>
+		<version>1.19.4</version> 
 
-			</executions>
+		
+		<dependencies>
+			<dependency>
+				<groupId>org.pitest</groupId>
+				<artifactId>pitest-junit5-plugin</artifactId>
+				<version>1.2.3</version> 
+			</dependency>
+		</dependencies>
+
+		<configuration>
 			
-			</plugin>
+			<javaExecutable>C:\Program Files\Eclipse Adoptium\jdk-21.0.9.10-hotspot\bin\java.exe</javaExecutable>
 
-		</plugins>
+			<testPlugin>junit5</testPlugin>
+
+			
+			<targetClasses>
+			<param>com.dependability.webapp.ReverseController*</param>
+			</targetClasses>
+			<targetTests>
+			<param>com.dependability.webapp.*</param>
+			</targetTests>
+
+			<verbose>true</verbose>
+
+			<jvmArgs>
+			<jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
+			<jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
+			<jvmArg>--add-opens=java.base/java.io=ALL-UNNAMED</jvmArg>
+			<jvmArg>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</jvmArg>
+			</jvmArgs>
+
+			<useClasspathJar>true</useClasspathJar>
+
+			<timestampedReports>false</timestampedReports>
+
+			<failWhenNoMutations>false</failWhenNoMutations>
+
+			<threads>1</threads>
+			<timeoutConstant>4000</timeoutConstant>
+
+			<outputFormats>
+			<param>HTML</param>
+			<param>XML</param>
+			</outputFormats>
+
+			<excludedClasses>
+			<param>com.dependability.webapp.WebappApplication*</param>
+			</excludedClasses>
+		</configuration>
+		</plugin>
+
+
+	</plugins>
 	</build>
+
+
 
 </project>
